fonts and minor content prep

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Netrix Digital</title>
+  <title>Megnath Ramesh</title>
   <meta name="description" content="Netrix is a digital agency specializing in Product Design. We help businesses create better products, not just art.">
   <meta name="keywords" content="product design,mobile design,ux design,web design,ui design,app design,user experience">
   <link rel="shortcut icon" type="image/x-icon" href="https://www.netrixdigital.com/images/favicon.ico">
@@ -134,7 +134,6 @@
   <div class="navbar">
     <div class="navbar-inner">
       <ul class="navbar-items">
-        <li class="navbar-item"><a href="https://www.netrixdigital.com/works.html">Works</a></li>
       </ul>
       <div class="navbar-footer">
         <div class="social-action-list horizontal">
@@ -151,7 +150,7 @@
             <i class="social-action-icon ci-facebook"></i>
           </a>
         </div>
-        <p class="navbar-email"><a href="mailto:hello@netrixdigital.com">hello@netrixdigital.com</a></p>
+        <p class="navbar-email"><a href="mailto:megalphian@gmail.com">megalphian@gmail.com</a></p>
       </div>
     </div>
   </div>
@@ -160,25 +159,10 @@
       <div class="main-nav header-main-nav main-nav-light">
         <div class="main-nav-side main-nav-side-left">
           <div class="main-nav-logo-container">
-            <a href="https://www.netrixdigital.com/index.html" class="main-nav-link">
-              <div class="main-nav-logo"></div>
+            <a href="index.html" class="main-nav-link">
+              <div class="main-nav-logo">Megnath Ramesh</div>
             </a>
           </div>
-        </div>
-        <div class="main-nav-side main-nav-side-right">
-          <ul class="main-nav-items">
-            <li class="main-nav-item">
-              <a href="https://www.netrixdigital.com/works.html" class="main-nav-link">
-                <span class="main-nav-item-inner">
-                  <span class="main-nav-item-default">Works</span>
-                  <span class="main-nav-item-hover">Works</span>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <button class="header-button-toggle">
-            <img src="files/images/cube-phone@2x.png" alt="" style="max-width: 36px;">
-          </button>
         </div>
       </div>
     </div>
@@ -191,22 +175,22 @@
           <div class="page-nav wow fadeIn" data-wow-delay="1.5s" data-wow-duration="1s" style="visibility: visible; animation-duration: 1s; animation-delay: 1.5s; animation-name: fadeIn;">
             <ul class="page-nav-items">
               <li class="page-nav-item page-nav-item-current">
-                <a href="https://www.netrixdigital.com/#section-intro" class="anchor-link">
+                <a href="index.html#section-intro" class="anchor-link">
                   <img src="files/images/planet@2x.png" alt="" style="max-width: 24px;">
                 </a>
               </li>
               <li class="page-nav-item">
-                <a href="https://www.netrixdigital.com/#section-works" class="anchor-link">
+                <a href="index.html#section-works" class="anchor-link">
                   <img src="files/images/phone@2x.png" alt="" style="max-width: 23px;">
                 </a>
               </li>
               <li class="page-nav-item">
-                <a href="https://www.netrixdigital.com/#section-who-we-are" class="anchor-link">
+                <a href="index.html#section-who-we-are" class="anchor-link">
                   <img src="files/images/red-ball@2x.png" alt="" style="max-width: 12px;">
                 </a>
               </li>
               <li class="page-nav-item">
-                <a href="https://www.netrixdigital.com/#section-our-team" class="anchor-link">
+                <a href="index.html#section-our-team" class="anchor-link">
                   <img src="files/images/cube@2x.png" alt="" style="max-width: 16px;">
                 </a>
               </li>
@@ -254,7 +238,7 @@
                   </div>
                   <ul class="section-contact-items wow fadeIn" data-wow-delay="1.5s" data-wow-duration="1s" style="visibility: visible; animation-duration: 1s; animation-delay: 1.5s; animation-name: fadeIn;">
                     <li class="section-contact-item">
-                      <a href="mailto:hello@netrixdigital.com">hello@netrixdigital.com</a>
+                      <a href="mailto:megalphian@gmail.com">megalphian@gmail.com</a>
                     </li>
                   </ul>
                 </div>
@@ -369,42 +353,6 @@
                               </a>
                             </div>
                           </div>
-                          <div class="work-preview-container wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">
-                            <div class="work-preview work-preview-fitwave" data-name="fitwave">
-                              <a href="https://www.netrixdigital.com/work-fitwave.html">
-                                <div class="work-preview-poster poster-500-365 poster-md-280-199">
-                                  <img src="files/images/fitwave@2x.png" alt="" style="max-width: 500px;">
-                                </div>
-                                <div class="work-preview-info">
-                                  <div class="work-preview-title-container">
-                                    <p class="work-preview-title">FitWave</p>
-                                  </div>
-                                  <ul class="work-preview-tag-list">
-                                    <li class="work-preview-tag">mobile application</li>
-                                  </ul>
-                                </div>
-                              </a>
-                            </div>
-                          </div>
-                          <div class="work-preview-container d-md-none wow fadeUpCustom animated" data-wow-duration="1s"
-                            style="visibility: visible; animation-duration: 1s; animation-name: fadeUpCustom;">
-                            <div class="work-preview work-preview-ryu" data-name="ryu">
-                              <a href="https://www.netrixdigital.com/work-ryu.html">
-                                <div class="work-preview-poster poster-565-400 poster-md-280-199">
-                                  <img src="files/images/ryu.svg" data-no-retina="" alt="">
-                                </div>
-                                <div class="work-preview-info">
-                                  <div class="work-preview-title-container">
-                                    <p class="work-preview-title">RYU<img src="files/images/cube-phone-reverse@2x.png"
-                                        class="figure-bounce" alt="" style="max-width: 32px;"></p>
-                                  </div>
-                                  <ul class="work-preview-tag-list">
-                                    <li class="work-preview-tag">website</li>
-                                  </ul>
-                                </div>
-                              </a>
-                            </div>
-                          </div>
                         </div>
                       </div>
                       <div class="col-6 d-none d-md-block">
@@ -470,8 +418,8 @@
                                 </div>
                                 <div class="work-preview-info">
                                   <div class="work-preview-title-container">
-                                    <p class="work-preview-title">RYU<img src="files/images/cube-phone-reverse@2x.png"
-                                        class="figure-bounce" alt="" style="max-width: 32px;"></p>
+                                    <p class="work-preview-title">RYU<img src="files/images/cube-phone-reverse@2x.png" class="figure-bounce" alt=""
+                                        style="max-width: 32px;"></p>
                                   </div>
                                   <ul class="work-preview-tag-list">
                                     <li class="work-preview-tag">website</li>
@@ -510,16 +458,8 @@
             </div>
             <div class="marquee-list">
               <div class="marquee marquee-to-left">
-                <div style="width: 100000px; transform: translateX(0px); animation: marqueeAnimation-6963311 31.1987s linear 0s infinite normal none running;"
+                <div style="width: 100000px; transform: translateX(0px); animation: marqueeAnimation-6963311 31.1987s linear 0s 10 normal none running;"
                   class="js-marquee-wrapper">
-                  <div class="js-marquee" style="margin-right: 0px; float: left;">
-                    ui/ux&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    application&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    development&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    ui/ux&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    application&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    development&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                  </div>
                   <div class="js-marquee" style="margin-right: 0px; float: left;">
                     ui/ux&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     application&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -531,16 +471,8 @@
                 </div>
               </div>
               <div class="marquee marquee-to-right">
-                <div style="width: 100000px; transform: translateX(-2630.09px); animation: marqueeAnimation-8897870 28.8616s linear 0s infinite normal none running;"
+                <div style="width: 100000px; transform: translateX(-2630.09px); animation: marqueeAnimation-8897870 28.8616s linear 0s 10 normal none running;"
                   class="js-marquee-wrapper">
-                  <div class="js-marquee" style="margin-right: 0px; float: left;">
-                    mobile&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    platforms&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    websites&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    mobile&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    platforms&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    websites&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                  </div>
                   <div class="js-marquee" style="margin-right: 0px; float: left;">
                     mobile&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     platforms&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -624,13 +556,6 @@
                           valuable digital products and services.</p>
                       </div>
                     </div>
-                    <div class="row">
-                      <div class="col-12">
-                        <div class="section-img-container wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">
-                          <div class="section-img"></div>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -640,9 +565,9 @@
                     <div class="main-nav footer-main-nav">
                       <div class="main-nav-side main-nav-side-left">
                         <div class="footer-contact">
-                          <a href="mailto:hello@netrixdigital.com">
+                          <a href="mailto:megalphian@gmail.com">
                             <div class="footer-contact-inner">
-                              <span class="footer-contact-label">hello@netrixdigital.com</span>
+                              <span class="footer-contact-label">megalphian@gmail.com</span>
                               <img src="files/images/arrow-right.svg" alt="">
                             </div>
                           </a>
