colors and lorem text :P

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: #5a61ed;
+      background-color: #006BB6;
     }
 
     .loader-figure {
@@ -181,16 +181,12 @@
                   <div class="section-content" style="min-height: 899px;">
                     <div class="row align-items-start">
                       <div class="col-12 col-lg-6 section-title-container">
-                        <h1 class="section-title wow fadeIn" data-wow-delay="0.5s" data-wow-duration="1s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.5s; animation-name: fadeIn;">We
-                          create products not just art</h1>
-                        <p class="section-text wow fadeIn" data-wow-delay="1s" data-wow-duration="0.5s" style="visibility: visible; animation-duration: 0.5s; animation-delay: 1s; animation-name: fadeIn;">Building
-                          solutions that work, piece by piece from idea to the final product and after launch.</p>
+                        <h1 class="section-title wow fadeIn" data-wow-delay="0.5s" data-wow-duration="1s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.5s; animation-name: fadeIn;">My name is Megnath Ramesh</h1>
+                        <p class="section-text wow fadeIn" data-wow-delay="1s" data-wow-duration="0.5s" style="visibility: visible; animation-duration: 0.5s; animation-delay: 1s; animation-name: fadeIn;">I am one of Alberta's very few Robotics Engineers, developing solutions for movement, recognition, VR and more.</p>
                       </div>
-                      <div class="col-12 col-lg-6 section-model-container">
+                      <div class="col-12 col-lg-6 section-image">
                         <div class="wow fadeIn" data-wow-duration="1s" style="visibility: visible; animation-duration: 1s; animation-name: fadeIn;">
-                          <canvas id="pyramidCanvas" width="1840" height="1219" style="width: 920px; height: 609.776px; cursor: default;"></canvas>
-                          <div id="cylinderTooltip" class="cylinder-tooltip" aria-hidden="true" style="opacity: 0;">click<br>on
-                            me</div>
+                          <div id="pyramidCanvas" width="1840" height="1219" style="width: 920px; height: 609.776px; cursor: default; background-image: url('files/images/robot.png');background-size: cover;"></div>
                         </div>
                       </div>
                     </div>
@@ -416,17 +412,12 @@
               <div class="content">
                 <div class="row">
                   <div class="col-12 col-lg-4">
-                    <p class="section-title wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">Who
-                      we are</p>
+                    <p class="section-title wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">Who I am</p>
                     <img src="files/images/cube-phone-big@2x.png" class="figure-bounce section-figure" alt="" style="max-width: 102px;">
                   </div>
                   <div class="col-12 col-lg-8">
-                    <p class="section-thesis wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">We
-                      listen, we understand, we think, we care and most importantly, we stay focused on creating an
-                      outstanding design that works hard for your business.</p>
-                    <p class="section-text wow fadeUpCustom" data-wow-duration="1s" data-wow-delay="0.5s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.5s; animation-name: none;">Working
-                      closely with our clients, we assure that we take into account all possible details to build
-                      cutting-edge products.</p>
+                    <p class="section-thesis wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">ऋषय ऊचुः भवता कथितः सम्यक् सर्गः स्वायंभुवस्ततः । ब्रह्माण्डस्यास्य विस्तारो मन्वन्तरविनिश्चयः. तत्रेश्वरेश्वरो देवो वर्णिभिर्धर्मतत्परैः । ज्ञानयोगरतैर्नित्यमाराध्यः कथितस्त्वया</p>
+                    <p class="section-text wow fadeUpCustom" data-wow-duration="1s" data-wow-delay="0.5s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.5s; animation-name: none;">तद्वदाशेषसंसारदुःखनाशमनुत्तमम् ज्ञानं ब्रह्मैकविषयं येन पश्येम तत्परम् त्वं हि नारायण साक्षात् कृष्णद्वैपायनात् प्रभो ।अवाप्ताखिलविज्ञानस्तत्त्वां पृच्छामहे पुनः ॥ श्रुत्वा मुनीनां तद् वाक्यं कृष्णद्वैपायनात् प्रभुम् ।</p>
                   </div>
                 </div>
               </div>
@@ -437,33 +428,32 @@
               <div class="content">
                 <div class="row align-items-baseline">
                   <div class="col-12 col-lg-4">
-                    <p class="section-title wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">What
-                      we do</p>
+                    <p class="section-title wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">What I do</p>
                   </div>
                   <div class="col-12 col-lg-8">
                     <div class="section-lists">
                       <div class="row">
                         <div class="col-12 col-md-6 col-lg-12">
                           <div class="section-list-container wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">
-                            <p class="section-list-title">Product Design</p>
+                            <p class="section-list-title">Category</p>
                             <div class="row">
                               <div class="col-12 col-lg-6">
                                 <ul class="section-list list-first">
-                                  <li class="section-list-item section-text">UX/UI Design</li>
+                                  <li class="section-list-item section-text">Sub-Category</li>
                                   <li class="section-list-item section-text">
                                     <ul class="section-list-sublist">
-                                      <li class="section-list-item section-text">Mobile Apps</li>
-                                      <li class="section-list-item section-text">Websites</li>
-                                      <li class="section-list-item section-text">Platforms</li>
+                                      <li class="section-list-item section-text">पपात दण्डवद्</li>
+                                      <li class="section-list-item section-text">भूमौ दृष्ट्वाऽसौ</li>
+                                      <li class="section-list-item section-text">लोमहर्षणः ।</li>
                                     </ul>
                                   </li>
                                 </ul>
                               </div>
                               <div class="col-12 col-lg-6">
                                 <ul class="section-list">
-                                  <li class="section-list-item section-text">Rapid Prototyping</li>
-                                  <li class="section-list-item section-text">User Research</li>
-                                  <li class="section-list-item section-text">UI Animations</li>
+                                  <li class="section-list-item section-text">प्रदक्षिणीकृत्य गुरुं</li>
+                                  <li class="section-list-item section-text">प्राञ्जलिः</li>
+                                  <li class="section-list-item section-text">पार्श्वगोऽभवत् ॥</li>
                                 </ul>
                               </div>
                             </div>
@@ -472,11 +462,11 @@
                         <div class="col-12 col-md-6 col-lg-12">
                           <div class="section-list-container wow fadeUpCustom" data-wow-duration="1s" data-wow-delay="0.5s"
                             style="visibility: hidden; animation-duration: 1s; animation-delay: 0.5s; animation-name: none;">
-                            <p class="section-list-title">Development</p>
+                            <p class="section-list-title">Category 2</p>
                             <ul class="section-list">
-                              <li class="section-list-item section-text">Mobile Native Development</li>
-                              <li class="section-list-item section-text">Mobile Hybrid Development</li>
-                              <li class="section-list-item section-text">Web Front-End Development</li>
+                              <li class="section-list-item section-text">पृष्टास्तेऽनामयं विप्राः</li>
+                              <li class="section-list-item section-text">शौनकाद्या महामुनिम् ।</li>
+                              <li class="section-list-item section-text">समाश्वास्यासनं तस्मै तद्योग्यं समकल्पयन् ॥</li>
                             </ul>
                           </div>
                         </div>
@@ -493,14 +483,11 @@
                 <div class="content">
                   <div class="row">
                     <div class="col-12 col-lg-4">
-                      <p class="section-title wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">Our
-                        Team</p>
+                      <p class="section-title wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">Let's connect</p>
                       <img src="files/images/cube-big@2x.png" class="figure-bounce section-figure" alt="" style="max-width: 79px;">
                     </div>
                     <div class="col-12 col-lg-8">
-                      <p class="section-thesis wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">Our
-                        team incorporates business strategy, design and technology to create successful, fun and
-                        valuable digital products and services.</p>
+                      <p class="section-thesis wow fadeUpCustom" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">सूतः पौराणिकः स्मृत्वा भाषितुं ह्युपचक्रमे ॥ अथास्मिन्नन्तरे व्यासः कृष्णद्वैपायनः स्वयम् ।  आजगाम मुनिश्रेष्ठा यत्र सत्रं समासते ॥ तं दृष्ट्वा वेदविद्वांसं कालमेघसमद्युतिम् । व्यासं कमलपत्राक्षं प्रणेमुर्द्विजपुंगवाः ॥</p>
                     </div>
                   </div>
                 </div>
