--- a/index.html
+++ b/index.html
@@ -9,23 +9,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>Megnath Ramesh</title>
-  <meta name="description" content="Netrix is a digital agency specializing in Product Design. We help businesses create better products, not just art.">
-  <meta name="keywords" content="product design,mobile design,ux design,web design,ui design,app design,user experience">
-  <link rel="shortcut icon" type="image/x-icon" href="https://www.netrixdigital.com/images/favicon.ico">
-  <style>
-    @-webkit-keyframes marqueeAnimation-6963311 {
-      100% {
-        transform: translateX(-2979.83px)
-      }
-    }
-  </style>
-  <style>
-    @-webkit-keyframes marqueeAnimation-8897870 {
-      100% {
-        transform: translateX(0)
-      }
-    }
-  </style>
+  <meta name="description" content="Tech Champion, Roboticist, X-Factor">
 </head>
 
 <body class="not-loaded">
