--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   </div>
                   <ul class="section-contact-items wow fadeIn" data-wow-duration="0.5s" style="animation-duration: 1s; animation-delay: 1.5s; animation-name: fadeIn;">
                     <li class="section-contact-item">
-                      <a href="mailto:megalphian@gmail.com">megnath.ramesh@gmail.com</a>
+                      <a href="mailto:megnath.ramesh@gmail.com">megnath.ramesh@gmail.com</a>
                     </li>
                   </ul>
                 </div>
